# npc_maker

./: .gitignore  LICENSE.txt  README.md  controllers.md  environments.md
docs/: controllers.md  environments.md  evolution.md  management.md  pandoc.sh  print.css  release.md
docs/images/: controller_interface.uml  environment_interface.uml  environment_specification.uml  syscfg_minimal.uml  syscfg_multi_ctrl.uml  syscfg_multi_env.uml  syscfg_multi_mgmt.uml  syscfg_multi_pop.uml  system_organization.uml
examples/cartpole/: README.md  cartpole.env  cartpole.mjcf  cartpole.py  pid_ctrl.py  requirements.txt  test_pid.py  wind.py
examples/neat/: neat.py  xor.py
examples/nn/: README.md  logistic_demo.py  nn.py  spec.json
examples/nn/src/: main.rs
examples/nn_py/: nn.py  test_nn.py
examples/nn_rs/: Cargo.toml
examples/nn_rs/src/: main.rs
examples/xor/: README.md  test.py  test_solution.py  xor.env  xor.py  xor_rust.env
examples/xor_py/: test_solution.py  xor.env  xor.py
examples/xor_rs/: Cargo.toml  xor.env  xor.rs
examples/xor_rs/src/: main.rs
examples/xor_rs/tests/: solution.rs
python/: .gitignore  README.md  pyproject.toml
python/npc_maker/: __init__.py  ctrl.py  env.py  evo.py  gen.py
python/tests/: test_individual.py
rust/: Cargo.toml  README.md
rust/src/: ctrl.rs  env.rs  env_api.rs  env_spec.rs  evo.rs  lib.rs  messages.rs  serde_utils.rs
rust/src/env/: api.rs  messages.rs  specification.rs
