[package]
    name = "npc_maker"
    version = "0.2.0"
    edition = "2024"
    rust-version = "1.86"
    license = "MIT-0"
    description = "Evolve AIs in simulated environments"
    repository = "https://github.com/ctrl-z-9000-times/npc_maker"
    categories = ["science"]
    keywords = ["ai", "alife", "evolution"]

[lib]
    doctest = false

[dependencies]
    libc                = { version = "0.2" }
    mate_selection      = "0.1"
    process_anywhere    = "0.3"
    rand                = "0.9"
    serde               = { version = "1.0", features = ["derive"] }
    serde_json          = { version = "1.0", features = ["float_roundtrip"] }
    ssh2                = "0.9"
    thiserror           = { version = "1.0" }
    typed-arena         = "2.0"
