[package]
    name = "npc_maker"
    version = "0.2.0"
    edition = "2024"
    rust-version = "1.86"
    license = "MIT-0"
    description = "Evolve AIs in simulated environments"
    repository = "https://github.com/ctrl-z-9000-times/npc_maker"
    categories = ["science"]
    keywords = ["ai", "alife", "evolution"]

[lib]
    doctest = false

[dependencies]
    chrono              = { version = "0.4" }
    libc                = { version = "0.2" }
    mate_selection      = { version = "0.1" }
    process_anywhere    = { version = "0.4" }
    rand                = { version = "0.9" }
    serde               = { version = "1.0", features = ["derive"] }
    serde_json          = { version = "1.0", features = ["float_roundtrip"] }
    ssh2                = { version = "0.9" }
    thiserror           = { version = "2.0" }
    typed-arena         = { version = "2.0" }
